# thematic

./: .envfile  .flake8  .gitignore  .readthedocs.yml  Makefile  README.md  mkdocs.yml  pylintrc  pyproject.toml
.github/workflows/: python-app.yml
openweb/: __init__.py
openweb/thematic/: __init__.py  clusters.py  clusters_test.py  topics.py
